syntax = "proto3";

package product;

option go_package = "./pkg/pb";

import "google/protobuf/timestamp.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
  rpc ListProduct(ListProductRequest) returns (ListProductResponse) {}
}

// ListProductRequest is the request for the ListProduct method.

message ListProductRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort = 3;
}

message ListProductData {
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  int64 price = 4;
}

// ListProductResponse is the response for the ListProduct method.

message ListProductResponse {
  int64 status = 1;
  string error = 2;
  repeated ListProductData data = 3;
  int32 totalPages = 4;
}

// CreateProduct

message CreateProductRequest {
  string name = 1;
  int64 stock = 2;
  int64 price = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message CreateProductResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// FindOne

message FindOneData {
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  int64 price = 4;
}

message FindOneRequest { int64 id = 1; }

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

// DecreaseStock

message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}